[package]
authors = ["Jakub Liska <pragmaxim@gmail.com>"]
description = "A stream adapter that buffers elements. Useful for unstable downstream consumers."
license = "MIT OR Apache-2.0"
name = "buffer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pragmaxim-com/buffer.rs"

[lib]
bench = false

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3"
chrono = "0.4.38"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1.38", features = ["full", "test-util"] }
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[dev-dependencies.doc-comment]
version = "0.3"

[[bench]]
name = "buffer_benchmark"
harness = false
